# Inventory_management

./: .gitignore  CMakeLists.txt
docs/: README.md
include/: inventory.h  product.h  user.h  utils.h
src/: inventory.cpp  main.cpp  product.cpp  user.cpp  utils.cpp
